--- a/site/guide/workflows/workflow-configuration-examples.qmd
+++ b/site/guide/workflows/workflow-configuration-examples.qmd
@@ -52,9 +52,11 @@ This workflow is initiated when a field is populated — in this case, when the 
 
 ## Workflow step type examples
 
+Detail views of the demo workflow step types[^11] used in the example workflows:
+
 #### {{< fa cube >}} Model Stage Change
 
-In this example, the model transitions into a stage[^11] called [In Documentation]{.bubble}:
+In this example, the model transitions into a stage[^12] called [In Documentation]{.bubble}:
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -75,7 +77,7 @@ In this example, the model transitions into a stage[^11] called [In Documentatio
 
 #### {{< fa wifi >}} Workflow State Change
 
-In this example, the workflow transitions into a state[^12] called [Model In Development]{.bubble} and progresses the workflow completion to 25%:
+In this example, the workflow transitions into a state[^13] called [Model In Development]{.bubble} and progresses the workflow completion to 25%:
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -94,7 +96,7 @@ In this example, the workflow transitions into a state[^12] called [Model In Dev
 
 #### {{< fa arrow-pointer >}} User Action v2
 
-In this example, the user is presented with an action button labelled **{{< fa arrow-right >}} Submit Documentation For Review** that requires them to include a model export in a [model export]{.smallcaps} attachment type field.[^13]
+In this example, the user is presented with an action button labelled **{{< fa arrow-right >}} Submit Documentation For Review** that requires them to include a model export in a [model export]{.smallcaps} attachment type field.[^14]
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -115,7 +117,7 @@ In this example, the user is presented with an action button labelled **{{< fa a
 
 #### {{< fa users >}} Approval
 
-In this example, the [peer reviewers]{.smallcaps} model stakeholders[^14] assigned to the model are presented with an approval message and a `Data Sources` field to review:
+In this example, the [peer reviewers]{.smallcaps} model stakeholders[^15] assigned to the model are presented with an approval message and a `Data Sources` field to review:
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -136,7 +138,7 @@ In this example, the [peer reviewers]{.smallcaps} model stakeholders[^14] assign
 
 #### {{< fa bullhorn >}} Broadcast
 
-In this example, the [Customer Admin]{.bubble} user role[^15] is sent an email notification after a model is deployed:
+In this example, the [Customer Admin]{.bubble} user role[^16] is sent an email notification after a model is deployed:
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -157,7 +159,7 @@ In this example, the [Customer Admin]{.bubble} user role[^15] is sent an email n
 
 #### {{< fa maximize >}} Condition Branch
 
-In this example, models where the field [genai model]{.smallcaps} is set to true undergo a special [legal review]{.smallcaps} model stakeholder[^16] approval process:[^17]
+In this example, models where the field [genai model]{.smallcaps} is set to true undergo a special [legal review]{.smallcaps} model stakeholder[^17] approval process:[^18]
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -176,7 +178,7 @@ In this example, models where the field [genai model]{.smallcaps} is set to true
 
 #### {{< fa clock >}} Wait
 
-In this example, the next step on the workflow waits until the timestamp indicated in a [deployment scheduled]{.smallcaps} date time field:[^18]
+In this example, the next step on the workflow waits until the timestamp indicated in a [deployment scheduled]{.smallcaps} date time field:[^19]
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -279,18 +281,20 @@ In this example, the workflow is designated to stop after running an additional 
 
 [^10]: [Workflow states](workflow-states.qmd)
 
-[^11]: [Manage model stages](manage-model-stages.qmd)
+[^11]: [Workflow step types](workflow-step-types.qmd)
 
-[^12]: [Workflow states](workflow-states.qmd)
+[^12]: [Manage model stages](manage-model-stages.qmd)
 
-[^13]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)
+[^13]: [Workflow states](workflow-states.qmd)
 
-[^14]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+[^14]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)
 
-[^15]: [Manage roles](/guide/configuration/manage-roles.qmd)
+[^15]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
-[^16]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+[^16]: [Manage roles](/guide/configuration/manage-roles.qmd)
 
-[^17]: [{{< fa users >}} Approval](#approval)
+[^17]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
-[^18]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
+[^18]: [{{< fa users >}} Approval](#approval)
+
+[^19]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
