--- a/site/guide/workflows/_workflow-step-types.qmd
+++ b/site/guide/workflows/_workflow-step-types.qmd
@@ -89,7 +89,7 @@ Other users viewing those fields or the workflow will see the value automaticall
 
 :::
 
-To configure a wait step, select when you would like to [resume workflow:]{.smallcaps}
+To configure a wait step, select when you would like to [resume workflow]{.smallcaps}
 
 | Option | Required field(s) | Description |
 |---:|---|---|
@@ -105,7 +105,7 @@ Triggers another workflow indicated by **[select workflow to run]{.smallcaps}**,
 
 ### {{< fa circle-nodes >}} Webhook
 
-When a workflow reaches a webhook step, the workflow will be paused. Listen for a `POST` request that resumes the workflow:
+When a workflow reaches a webhook step, the workflow will pause. Listen for a `POST` request to resumes the workflow:
 
 ::: {.panel-tabset}
 
@@ -231,7 +231,7 @@ Triggers another workflow indicated by **[select workflow to run]{.smallcaps}**,
 
 #### {{< fa circle-nodes >}} Webhook
 
-When a workflow reaches a webhook step, the workflow will be paused. Listen for a `POST` request that resumes the workflow.
+When a workflow reaches a webhook step, the workflow will pause. Listen for a `POST` request to resumes the workflow.
 
 #### {{< fa cloud-arrow-up >}} HTTP Request
 
