Topic rename experiment

--- a/site/guide/guides.qmd
+++ b/site/guide/guides.qmd
@@ -19,6 +19,7 @@ listing:
     contents:
     - configuration/managing-your-organization.qmd
     - configuration/managing-users.qmd
+    - integrations/managing-integrations.qmd
   - id: guides-customize
     type: grid
     max-description-length: 250
