--- a/site/guide/integrations/connect-through-workflows.qmd
+++ b/site/guide/integrations/connect-through-workflows.qmd
@@ -1,10 +1,9 @@
 ---
-title: "Use HTTP requests and webhooks"
+title: "Connect through workflows"
 date: last-modified
 ---
 
 Use HTTP request steps to send data from ValidMind to another service, configure workflows to start when external systems send webhook POST requests, or add webhook step triggers that pause workflow execution until an external system sends a POST request.
-
 
 ::: {.attn}
 
@@ -24,7 +23,7 @@ HTTP request steps send data from ValidMind to an external service. Use them to 
 
 1. Open the workflow you want to modify.
 
-2. Drag and drop an **HTTP Request** step from the **Workflow Steps** modal onto the canvas.
+2. From the **Workflow Steps** modal, drag and drop an **HTTP Request** step onto the canvas.
 
 3. Double-click the step to open the **Configure HTTP Request** modal.
 
@@ -65,7 +64,7 @@ Webhook step triggers pause workflow execution and wait for an external system t
 
 1. Open the workflow you want to modify.
 
-2. Drag and drop a **Webhook** step from the **Workflow Steps** modal onto the canvas.
+2. From the **Workflow Steps** modal, drag and drop a **Webhook** step onto the canvas.
 
 3. Double-click the step to open the **Webhook Step Trigger** modal.
 
