--- a/site/guide/workflows/_workflow-step-types.qmd
+++ b/site/guide/workflows/_workflow-step-types.qmd
@@ -109,27 +109,27 @@ When a workflow reaches a webhook step, the workflow will pause. Listen for a `P
 
 ::: {.panel-tabset}
 
-#### Copy webhook URL
+#### 1. Copy webhook URL
 
 - Click **{{< fa copy >}} Copy** to the right of URL to copy the webhook URL to your clipboard.
 
-- Send your `POST` request to this webhook URL.
+- This webhook URL is where you should send your `POST` request.
 
-#### Configure and copy payload
+#### 2. Configure and copy payload
 
 1. Under [select target model for payload]{.smallcaps}, choose a model from your inventory^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)] to populate the target for the payload.
 
 2. Click **{{< fa copy >}} Copy** to the right of Payload to copy the payload to your clipboard.
 
-    Send this payload to the webhook URL in your `POST` request.
+    Include this payload in your `POST` request to the webhook URL.
 
-#### Copy authentication headers
+#### 3. Copy authentication headers
 
 - Click **{{< fa copy >}}** to the right of the `x-api-key` and its value to copy them to your clipboard.
 
 - Click **{{< fa copy >}}** to the right of the the `x-api-secret` and its value to copy them to your clipboard.
 
-- Include these headers with your `POST` request to authenticate your call.
+- Include these headers with your `POST` request to authenticate your call when you send the request to the webhook URL.
 
 :::
 
