--- a/site/guide/workflows/_conditional-requirements.qmd
+++ b/site/guide/workflows/_conditional-requirements.qmd
@@ -67,7 +67,7 @@ Select from either **Model Stakeholder Types**^[[Manage model stakeholder types]
 
 ### {{< fa clock >}} Wait [required]{.smallercaps .pink}
 
-Select when you would like to [resume workflow]{.smallcaps}
+Select when you would like to [resume workflow]{.smallcaps}:
 
 ::: {.panel-tabset}
 
