--- a/site/guide/workflows/_conditional-requirements.qmd
+++ b/site/guide/workflows/_conditional-requirements.qmd
@@ -85,7 +85,7 @@ Set the **[model field]{.smallcaps}**^[[Manage model inventory fields](/guide/mo
 
 ##### Time Delta from Specified Date on Model Field
 
-a. Set the **[model field]{.smallcaps}**^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)] with a valid `Date` or `Date Time` type model inventory field that defines the specific timestamp on a per model basis.
+a. Set the **[model field]{.smallcaps}**^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)] to a valid `Date` or `Date Time` type model inventory field that defines the specific timestamp on a per model basis.
 
 b. Select a **[time delta direction]{.smallcaps}** relative to your selected field.
 
