--- a/site/guide/workflows/_workflow-step-types.qmd
+++ b/site/guide/workflows/_workflow-step-types.qmd
@@ -121,7 +121,7 @@ When a workflow reaches a webhook step, the workflow will pause. Listen for a `P
 
 2. Click **{{< fa copy >}} Copy** to the right of Payload to copy the payload to your clipboard.
 
-    Include this payload in your `POST` request to the webhook URL.
+    Include this payload when you send your `POST` request to the webhook URL.
 
 #### 3. Copy authentication headers
 
