--- a/site/guide/workflows/_workflow-step-types.qmd
+++ b/site/guide/workflows/_workflow-step-types.qmd
@@ -129,7 +129,7 @@ When a workflow reaches a webhook step, the workflow will pause. Listen for a `P
 
 - Click **{{< fa copy >}}** to the right of the `x-api-secret` and its value to copy them to your clipboard.
 
-- Include these headers with your `POST` request to authenticate your call when you send the request to the webhook URL.
+Send your `POST` request to the webhook URL and include these headers with your request to authenticate your call.
 
 :::
 
