Forgot the info for workflows that start on webhooks

--- a/site/guide/workflows/_add-new-workflows.qmd
+++ b/site/guide/workflows/_add-new-workflows.qmd
@@ -23,6 +23,7 @@ a. Under **[workflow start]{.smallcaps}**, select when the workflow should be in
     - **Manually** — Start this workflow manually.^[[Initiate workflows](/guide/workflows/manage-workflows.qmd#initiate-workflows)]
     - **On Model Registration** — Start this workflow when a model is registered in your model inventory.[^on-model-registration]
     - **On Custom Field Change** — Start this workflow on a change to a specific model inventory field.[^on-field-change] To configure, select a field under **[model field to monitor]{.smallcaps}**.
+    - **Via Webhook** — Start this workflow when a webhook event is received.
 
 a. Under **[workflow expected duration]{.smallcaps}**, define the SLA for the workflow based on the start date in days, weeks, months, or years.
 
@@ -96,6 +97,7 @@ a. Under **[workflow start]{.smallcaps}**, select when the workflow should be in
     - **Manually** — Start this workflow manually.
     - **On Model Registration** — Start this workflow when a model is registered in your model inventory.
     - **On Custom Field Change** — Start this workflow on a change to a specific model inventory field. To configure, select a field under **[model field to monitor]{.smallcaps}**.
+    - **Via Webhook** — Start this workflow when a webhook event is received.
 
 a. Under **[workflow expected duration]{.smallcaps}**, define the SLA for the workflow based on the start date in days, weeks, months, or years.
 
