--- a/site/guide/workflows/_configure-workflow-steps.qmd
+++ b/site/guide/workflows/_configure-workflow-steps.qmd
@@ -7,6 +7,7 @@ To add or edit workflow steps:
 
 1. Click on the workflow you'd like to modify, then:
 
+    - For workflows that start when a webhook is received, double-click the **Start** node to configure the webhook.[^on-webhook]
     - To add a step, drag and drop a new step onto the canvas.
     - Double-click the new step to open up the configuration modal.
 
@@ -19,6 +20,17 @@ Refer to [Introduction to workflows](/guide/workflows/introduction-to-workflows.
 
 :::
 
+<!-- ADDITIONAL FOOTNOTES -->
+
+[^on-webhook]:
+
+    1. Click **{{< fa copy >}} Copy** to the right of URL to copy the webhook URL to your clipboard. This webhook URL is where you should send your `POST` request.
+    2. Under [select target model for payload]{.smallcaps}, choose a model from [your inventory](/guide/model-inventory/working-with-model-inventory.qmd) to populate the target for the payload.
+    3. Click **{{< fa copy >}} Copy** to the right of Payload to copy the payload to include in your `POST` request to your clipboard.
+    4. Click **{{< fa copy >}}** to the right of the `x-api-key` and its value to copy them to your clipboard.
+    5. Click **{{< fa copy >}}** to the right of the `x-api-secret` and its value to copy them to your clipboard.
+    6. Send your `POST` request to the webhook URL and include these headers with your request to authenticate your call.
+
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
@@ -30,6 +42,7 @@ a. Under Workspace, select **Workflows**.
 
 a. Click on the workflow you'd like to modify, then:
 
+    - For workflows that start when a webhook is received, double-click the **Start** node to configure the webhook.
     - To add a step, drag and drop a new step onto the canvas.
     - Double-click the new step to open up the configuration modal.
 
