--- a/site/guide/workflows/_configure-workflow-steps.qmd
+++ b/site/guide/workflows/_configure-workflow-steps.qmd
@@ -27,9 +27,8 @@ Refer to [Introduction to workflows](/guide/workflows/introduction-to-workflows.
     1. Click **{{< fa copy >}} Copy** to the right of URL to copy the webhook URL to your clipboard. This webhook URL is where you should send your `POST` request.
     2. Under [select target model for payload]{.smallcaps}, choose a model from [your inventory](/guide/model-inventory/working-with-model-inventory.qmd) to populate the target for the payload.
     3. Click **{{< fa copy >}} Copy** to the right of Payload to copy the payload to include in your `POST` request to your clipboard.
-    4. Click **{{< fa copy >}}** to the right of the `x-api-key` and its value to copy them to your clipboard.
-    5. Click **{{< fa copy >}}** to the right of the `x-api-secret` and its value to copy them to your clipboard.
-    6. Send your `POST` request to the webhook URL and include these headers with your request to authenticate your call.
+    4. Click **{{< fa copy >}}** to the right of `x-api-key` and `x-api-secret` and their values to copy them to your clipboard.
+    5. Send your `POST` request to the webhook URL and include these headers with your request to authenticate your call.
 
 ::::
 
